Make ENV.clone and ENV.dup return ENV

ENV is a singleton object, and it doesn't make sense for clone
and dup to return a separate object as the same environment table
is used.

ENV.dup previously returned a regular instance of Object, and as
such was worthless.

Have ENV.clone(freeze: true) raise TypeError, the same as
ENV.freeze.

Also undef the ENV.initialize{,_dup,_clone,_copy} private methods
as they are not needed.

Fixes [Bug #17767]